# irc-tokio

./: .env.template  ASK.md  Cargo.toml  LICENSE-MIT.md  README.md  notes.md
examples/: 1a-connect.rs  1b-connect_lines.rs  2a-session-struct.rs  2a-session-struct.rs.txt  2b-session-struct.rs  closure-error.rs  closure-lifetime-error.rs  closure.rs  enum.rs  lifetime.rs  session-error.rs  struct-closure.rs  struct-closure2.rs  struct-closure3.rs  struct-closure3a.rs  struct-closure4.rs  struct-closure4a.rs  struct-vec.rs
notes/: README.md  async-rust.md  protocol-about.md  protocol-capture.md  stream.md
src/: error.rs  lib.rs  main.rs  message.rs
src/irc/: message.rs  mod.rs
