[package]
name = "irc-tokio"
version = "0.1.0"
authors = ["Sarah Allen <sarah@ultrasaurus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.4", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["full"] }
futures = "0.3.4"

[dev-dependencies]
tokio-test = "0.2.0"

